--- a/Web/html/index.html
+++ b/Web/html/index.html
@@ -11,7 +11,7 @@
 <body>
 	<nav>
 			<div class="profile">
-			<img src="../images/logosae.png" alt="logo SAE24" />
+			<img src="../images/logosae.png" alt="logo SAE24"  title="Logo SAE24" />
 				<h1>Localiser une source sonore dans un environnement intérieur</h1>
 			</div>
 			<ul> 
