--- a/Web/html/mentions.html
+++ b/Web/html/mentions.html
@@ -12,7 +12,7 @@
 	<body>
 	<nav>
 			<div class="profile">
-			<img src="../images/logosae.png" alt="logo SAE24" />
+			<img src="../images/logosae.png" alt="logo SAE24" title="Logo SAE24" />
 				<h1>Localiser une source sonore dans un environnement intérieur</h1>
 			</div>
 			<ul> 
@@ -35,7 +35,7 @@
    <a class="mail" style="text-decoration:none" href="mailto:clement.roques@etu.univ-tlse2.fr">clement.roques@etu.univ-tlse2.fr</a><br>
    <a class="mail" style="text-decoration:none" href="mailto:eliott.milcent@etu.univ-tlse2.fr">eliott.milcent@etu.univ-tlse2.fr</a><br></p>
 
-<h2>Site hébergé sur :</h2> <a class="eohost" href="https://www.eohost.com/">eohost.com</a>
+<h2>Site hébergé sur :</h2> <a class="eohost" href=""></a>
 
 <h2>Images utilisées :</h2>
 <p>Le favicon provient du site <a href="https://studio.tailorbrands.com/">studio.tailorbrands.com</a></p>
