--- a/Web/html/affichage.html
+++ b/Web/html/affichage.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-	<nav>
+	<nav> <!--Navigation bar-->
 			<div class="profile">
 			<img src="../images/logosae.png" alt="logo SAE24" title="Logo SAE24" />
 				<h1>Localiser une source sonore dans un environnement intérieur</h1>
