--- a/Web/html/contexte.html
+++ b/Web/html/contexte.html
@@ -10,7 +10,7 @@
 	</head>
 
 <body>
-	<nav>
+	<nav> <!--Navigation bar-->
 			<div class="profile">
 			<img src="../images/logosae.png" alt="logo SAE24" title="Logo SAE24" />
 				<h1>Localiser une source sonore dans un environnement intérieur</h1>
@@ -23,7 +23,7 @@
 		</nav>
 
 		<p class="choix">
-		Tout d’abord, pour cette SAE 24 intitulée “Localiser une source sonore dans un environnement intérieur”, notre équipe était formée de 6 élèves. Ce projet nous a été proposé par nos professeurs référents qui sont Mr. Brulin ainsi que Mr.Roux. Nous avions à disposition 52h30 pour la réalisation de ce projet. Le but de  ce projet était donc de permettre à une personne de retrouver un objet qui émet du son.</p> <br>
+		Tout d’abord, pour cette SAE 24 intitulée <strong> Localiser une source sonore dans un environnement intérieur</strong>, notre équipe était formée de 6 élèves. Ce projet nous a été proposé par nos professeurs référents qui sont Mr. Brulin ainsi que Mr.Roux. Nous avions à disposition 52h30 pour la réalisation de ce projet. Le but de  ce projet était donc de permettre à une personne de retrouver un objet qui émet du son.</p> <br>
 
 		<p class="choix">Premièrement, la mise en place d’un Gantt afin de gérer les tâches à réaliser ainsi que de répartir la charge de travail.</p><br>
 
@@ -59,6 +59,6 @@
 <p>Voici la répartition du travail sur notre diagramme de GANTT:</p>
 
 			
-		<a href="../images/gantt.pdf"><img class="gantt" src="../images/gantt.png" alt="Notre Gantt" title="Cliquez pour afficher.">  </a>
+		<a href="../images/gantt.pdf"><img class="gantt" src="../images/gantt.png" alt="Notre Gantt" title="Cliquez pour ouvrir le PDF.">  </a>
 	</body>
 	
