--- a/Web/html/index.html
+++ b/Web/html/index.html
@@ -9,7 +9,7 @@
 		<title>Accueil</title> <!--Tab title-->
 	</head>
 <body>
-	<nav>
+	<nav> <!--Navigation bar-->
 			<div class="profile">
 			<img src="../images/logosae.png" alt="logo SAE24"  title="Logo SAE24" />
 				<h1>Localiser une source sonore dans un environnement intérieur</h1>
@@ -22,9 +22,9 @@
 	</nav>
 	<h1>Notre objectif</h1>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pour la SAE 24 proposée par Messieurs Brulin et Roux, notre objectif était de localiser une source sonore dans un environnement intérieur. Grâce à 3 capteurs placés dans 3 coins de la salle, nous devions le plus précisément possible réussir à donner la localisation de l'objet (en acceptant une marge d'erreur de 10%) <br>
-<p>Dans un groupe de 6 élèves, nous avions  un total de 52h30 pour effectuer ce projet. 48 heures en autonomie et 4,5 heures encadrées.
+<p>Dans un groupe de 6 élèves, nous avions  un total de 52h30 pour effectuer ce projet. 48 heures en autonomie et 4,5 heures encadrées. Sur ce site web, vous trouverez une page qui affichera la position de l'objet grâce au langage PHP.
 <h1>Notre équipe:</h1> 
-<ul>
+<ul> <!-- Clickable names to send mail-->
 	<li><a style="text-decoration:none" href="https://www.linkedin.com/in/mattieunaissant/"><b>Naissant</b> Mattieu</a></li>
 	<li><a style="text-decoration:none" href="mailto:thomas.roux@etu.univ-tlse2.fr"><b>Roux</b> Thomas</a></li>
 	<li><a style="text-decoration:none" href="mailto:zakaria.sabri@etu.univ-tlse2.fr"><b>Sabri</b> Zakaria</a></li>
