--- a/Web/html/mentions.html
+++ b/Web/html/mentions.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-	<nav>
+	<nav> <!--Navigation bar-->
 			<div class="profile">
 			<img src="../images/logosae.png" alt="logo SAE24" title="Logo SAE24" />
 				<h1>Localiser une source sonore dans un environnement intérieur</h1>
@@ -26,7 +26,7 @@
 
 <h2>Adresse :</h2>
 <p>BP 60073 31703 Cédex, 1 Pl. Georges Brassens, 31700 Blagnac</p><br>
-
+<!--Clickable names to send mail-->
 <h2>Adresses mails :</h2>
 <p><a class="mail" style="text-decoration:none" href="mailto:lucas.berjaud@etu.univ-tlse2.fr">lucas.berjaud@etu.univ-tlse2.fr</a><br>
    <a class="mail" style="text-decoration:none" href="mailto:mattieu.naissant@gmail.com">mattieu.naissant@gmail.com</a><br>
@@ -38,7 +38,7 @@
 <h2>Site hébergé sur :</h2> <a class="eohost" href=""></a>
 
 <h2>Images utilisées :</h2>
-<p>Le favicon provient du site <a href="https://studio.tailorbrands.com/">studio.tailorbrands.com</a></p>
+<p>Le favicon provient du site <a href="https://studio.tailorbrands.com" style="text-decoration:none">studio.tailorbrands</a></p>
 
 <footer>
             <ul>
