--- a/Web/html/affichage.html
+++ b/Web/html/affichage.html
@@ -21,5 +21,6 @@
 				<li><a style="text-decoration:none" href="mentions.html" class="button">Mentions légales</a></li>
 			</ul>
 		</nav>
-		<p> Sur cette page, la source sonore sera localisée et affichée.
+		<p> Sur cette page, la source sonore sera localisée et affichée.</p>
 	</body>
+</html>
