--- a/Web/html/contexte.html
+++ b/Web/html/contexte.html
@@ -62,3 +62,4 @@
 		<a href="../images/gantt.pdf"><img class="gantt" src="../images/gantt.png" alt="Notre Gantt" title="Cliquez pour ouvrir le PDF.">  </a>
 	</body>
 	
+</html>
