Update website final

--- a/Web/html/mentions.html
+++ b/Web/html/mentions.html
@@ -5,20 +5,20 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- The browser viewport is the area of the window in which web content can be viewed. -->
 		<link rel="stylesheet" href="../style/style.css" /> <!-- Allow to link the style page-->
-                <link rel="shortcut icon" type="image/png" href="../images/logosae.png"/> <!-- favicon= tab icon on browser-->
-                <title>Mentions légales</title> <!--Tab title-->
+        <link rel="shortcut icon" type="image/png" href="../image/logosae.png"/> <!-- favicon= tab icon on browser-->
+        <title>Mentions légales</title> <!--Tab title-->
 	</head>
 
 	<body>
 	<nav> <!--Navigation bar-->
 			<div class="profile">
-			<img src="../images/logosae.png" alt="logo SAE24" title="Logo SAE24" />
+				<img src="../image/logosae.png" alt="logo SAE24" title="Logo SAE24" />
 				<h1>Localiser une source sonore dans un environnement intérieur</h1>
 			</div>
 			<ul> 
-				<li><a style="text-decoration:none" href="index.html" class="button">Accueil</a></li>
+				<li><a style="text-decoration:none" href="../index.html" class="button">Accueil</a></li>
 				<li><a style="text-decoration:none" href="contexte.html" class="button">Contexte</a></li>
-				<li><a style="text-decoration:none" href="affichage.html" class="button">Affichage</a></li>
+				<li><a style="text-decoration:none" href="../affichage.php" class="button">Affichage</a></li>
 			</ul>
 		</nav>
 	<h2>Propriétaires du site :</h2>
