Update docker compose and link to GANTT file

--- a/Docker/nginx/Web/html/contexte.html
+++ b/Docker/nginx/Web/html/contexte.html
@@ -59,7 +59,7 @@
 <p>Voici la répartition du travail sur notre diagramme de GANTT:</p>
 
 			
-		<a href="../images/gantt.pdf"><img class="gantt" src="../images/gantt.png" alt="Notre Gantt" title="Cliquez pour ouvrir le PDF.">  </a>
+		<a href="../image/gantt.pdf"><img class="gantt" src="../image/gantt.png" alt="Notre Gantt" title="Cliquez pour ouvrir le PDF.">  </a>
 	</body>
 	
 </html>
